WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146774
Fix grammar issue in TypeError attempting to change an unconfigurable property
https://bugs.webkit.org/show_bug.cgi?id=146774
Summary
Fix grammar issue in TypeError attempting to change an unconfigurable property
Joseph Pecoraro
Reported
2015-07-08 22:01:09 PDT
* SUMMARY Fix grammar issue in TypeError attempting to change an unconfigurable property. * TESTs js> Object.defineProperty(function(){}, "name", {configurable:true}) => TypeError: Attempting to configurable attribute of unconfigurable property. js> Object.defineProperty(Object.defineProperty({}, 'foo', {value: 1}), 'foo', {value:2, configurable: true}) => TypeError: Attempting to configurable attribute of unconfigurable property. * NOTES - Repeated in a few different places (e.g. JSFunction and JSObject above). Not sure how to trigger the StringObject instance.
Attachments
[PATCH] Proposed Fix
(7.46 KB, patch)
2015-07-08 22:02 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-07-08 22:02:02 PDT
Created
attachment 256457
[details]
[PATCH] Proposed Fix
Brent Fulgham
Comment 2
2015-07-08 22:04:15 PDT
Comment on
attachment 256457
[details]
[PATCH] Proposed Fix r=me. Thank you for fixing this!
WebKit Commit Bot
Comment 3
2015-07-08 23:05:48 PDT
Comment on
attachment 256457
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 256457 Committed
r186584
: <
http://trac.webkit.org/changeset/186584
>
WebKit Commit Bot
Comment 4
2015-07-08 23:05:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug