Fix grammar issue in TypeError attempting to change an unconfigurable property https://bugs.webkit.org/show_bug.cgi?id=146774

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-07-08
Reviewed by Brent Fulgham.

Source/JavaScriptCore:

* runtime/JSFunction.cpp:
(JSC::JSFunction::defineOwnProperty):
* runtime/JSObject.cpp:
(JSC::JSObject::defineOwnNonIndexProperty):
* runtime/StringObject.cpp:
(JSC::StringObject::defineOwnProperty):

LayoutTests:

* js/dom/Object-defineProperty-expected.txt:

Canonical link: https://commits.webkit.org/164858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186584 268f45cc-cd09-0410-ab3c-d52691b4dbfc